<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MooseDroid</string>
    <string name="hello_world">Hello</string>
    <string name="action_settings">Settings</string>

    <!--<string name="start">Start LUL</string>-->
    <!--<string name="cancel">Cancel</string>-->
    <!--<string name="stop">Stop and recognize</string>-->
    <string name="recording">Recording</string>
    <string name="volume">Volume: </string>
    <string name="result">Result: </string>
    <string name="start">Start!</string>
    <string name="stop">Stop and recognize</string>
    <string name="cancel">Cancel</string>

    <string name="action_favorite">Logout</string>
    <string name="action_map">Map</string>
    <string name="action_users">Local Users</string>
    <string name="item_1">Rec</string>
    <string name="item_2">Map</string>
    <string name="item_3">Web</string>
    <string name="share">Share</string>

    <!-- Strings related to login -->

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_listened">Listened</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="press_mic_to_start">Press mic to start recognizing</string>
    <string name="auto_populate">Auto Populate</string>
    <string name="empty_listened">Delete All</string>
    <string name="error">Error occurred</string>
    <string name="not_found">Song not found!</string>

</resources>
