<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >



    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/users"
        android:title="@string/action_users"
        app:showAsAction="never"/>

    <item android:id="@+id/listened"
        android:title="@string/action_listened"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_headset_mic_black_24dp"/>

    <item android:id="@+id/populate"
        android:title="Auto populate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favorite"
        app:showAsAction="never"
        android:title="@string/action_favorite"
        />
</menu>