<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fcfcfc"
    android:orientation="vertical">

    <include layout="@layout/toolbar_main" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:background="#00b8cc"
                android:id="@+id/start"
                android:layout_width="fill_parent"
                android:layout_height="37dp"
                android:text="@string/start" />

            <Button
                android:id="@+id/stop"
                android:layout_width="fill_parent"
                android:layout_height="37dp"
                android:background="#0d92a1"
                android:text="@string/stop" />

            <Button
                android:background="#00b8cc"
                android:id="@+id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="37dp"
                android:text="@string/cancel" />
            
            <TextView
                android:id="@+id/volume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/testBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

            <TextClock
                android:id="@+id/textClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
